# TotalComputers

./: .gitignore  CMakeLists.txt  Jenkinsfile  Makefile  README.md  VERSION  build.gradle  index
.github/workflows/: gradle.yml
.idea2/: compiler.xml
.idea2/artifacts/: NativeWindowJAR.xml  TotalComputers_jar.xml  TotalComputers_jar2.xml
.idea2/libraries/: lwjgl.xml
BSoD Test.app/: name
GBC Emulator.app/: author
GPUCache/: data_1  index
ImageViewer.app/: name
Jukebox.app/: name
NES Emulator.app/: author  name
OpenGL.app/: name
Preferences.app/: author
ScreenCapture/native/win32/: CMakeLists.txt  com_jnngl_misc_ScreenCapture.h  impl.cpp
VBox Manager.app/: name
Video Player.app/: name
VirtualBox Support/native_ms/: CMakeLists.txt  VirtualBox.h  VirtualBox_i.c  com_jnngl_system_VBoxMS.h  impl.cpp
VirtualBox.app/: name
Web Browser.app/: application
Web Browser/native/: CMakeLists.txt  base.hpp  com_jnngl_system_BrowserImpl_Native.h  impl.cpp
Web Browser/native/include/include/: cef_pack_resources.h  cef_pack_strings.h  cef_version.h
Web Browser/src/org/cef/: CefClient.java  SystemBootstrap.java
browser/: CMakeLists.txt  browser.hpp  main.cpp  native.cc
browser/cef_data/locales/: cs.pak  el.pak  es-419.pak  es.pak  gu.pak  id.pak  ro.pak  vi.pak
browser/include/: com_jnngl_system_NativeWindowApplication.h  io.h  j_env.h  security.h  text.h  util.h  utils.h
browser/include/include/: cef_pack_strings.h
browser/lib/: libcef.lib
cef/: CMakeLists.txt  base.hpp  impl.cpp
cef/include/include/: cef_pack_resources.h  cef_version.h
include/: awt.h  com_jnngl_misc_ScreenCapture.h  com_jnngl_system_VBoxMS.h  com_jnngl_system_WebBrowserBootstrap.h  com_jnngl_system_WebBrowserBootstrapV2.h  io.h  j_env.h  jmath.h  lang.h  main.h  net.h  nio.h  object.h  security.h  text.h  total_computers.h  util.h  utils.h
javadoc/: allclasses-index.html  allpackages-index.html  element-list  help-doc.html  index.html  member-search-index.js  overview-summary.html  overview-tree.html  package-search-index.js  serialized-form.html  type-search-index.js
javadoc/com/jnngl/totalcomputers/: AABB.html  ConfigManager.ConfigPath.html  ConfigManager.Configuration.html  ConfigManager.html  MapColor.html  TotalComputers.InputInfo.InteractType.html  TotalComputers.InputInfo.html  TotalComputers.MonitorPiece.html  TotalComputers.MonitorPieceIndex.html  TotalComputers.SelectionArea.Axis.html  TotalComputers.SelectionArea.Direction.html  TotalComputers.SelectionArea.html  TotalComputers.html  package-summary.html  package-tree.html  package-use.html
javadoc/index-files/: index-1.html  index-10.html  index-11.html  index-12.html  index-13.html  index-14.html  index-15.html  index-16.html  index-17.html  index-18.html  index-19.html  index-2.html  index-20.html  index-21.html  index-22.html  index-23.html  index-24.html  index-25.html  index-26.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html  index-9.html
lib/: total_computers.lib
lwjgl/: build.txt
nativeTest/: CMakeLists.txt  main.cpp  native.cc
nativeTest/include/: awt.h  com_jnngl_system_NativeWindowApplication.h  jmath.h  main.h  net.h  nio.h  total_computers.h
rootfs/test/sys/: account  associations  locale  taskbar  wallpaper
src/: awt.cpp  io.cpp  j_env.cpp  lang.cpp  math.cpp  native.cc  net.cpp  nio.cpp  object.cpp  plugin.yml  security.cpp  test.tq  text.cpp  total_computers.cpp  util.cpp  utils.cpp
src/com/jnngl/: OpenGLApplication.java
src/com/jnngl/packet/: MapPacketSender.java  MapPacketSenderFactory.java  MapPacketSender_R1_14.java  MapPacketSender_R1_17.java  MapPacketSender_R1_8.java  MapPacketSender_R1_9.java  PacketListener.java  (+1 more)
src/main/resources/: howler.core.js  index.html  plugin.yml  websocket.js
src/org/cef/: MainFrame.java
win64/: chrome_100_percent.pak  chrome_200_percent.pak
win64/locales/: am.pak  ar.pak  bg.pak  bn.pak  ca.pak  cs.pak  da.pak  de.pak  el.pak  en-GB.pak  en-US.pak  es-419.pak  es.pak  et.pak  fa.pak  fi.pak  fil.pak  fr.pak  gu.pak  he.pak  hi.pak  hr.pak  hu.pak  id.pak  it.pak  ja.pak  kn.pak  ko.pak  lt.pak  lv.pak  ml.pak  mr.pak  ms.pak  nb.pak  nl.pak  pl.pak  pt-BR.pak  pt-PT.pak  ro.pak  ru.pak  (+13 more)
(+387 files in other folders)
